--- a/Skills.html
+++ b/Skills.html
@@ -24,21 +24,21 @@
     </a>
     <nav>
         <ul id="menu">
-            <li><a href="/index.html">Home</a></li>
-    <li><a href="/components/About.html">About</a></li>
-            <li>
-                <a href="/components/Skills.html">Skills</a>
-            </li>
-            <li>
-                <a href="/components/Projects.html">Projects</a>
-            </li>
-            <li>
-                <a href="/components/Feats.html">Feats</a>
-            </li>
-            <li>
-                <a href="/components/Resume.pdf" target="_blank" class="button black">Resume</a>
-
-            </li>
+          <li><a href="/index.html">Home</a></li>
+        <li><a href="/About.html">About</a></li>
+				<li>
+					<a href="/Skills.html">Skills</a>
+				</li>
+				<li>
+					<a href="/Projects.html">Projects</a>
+				</li>
+                <li>
+                    <a href="/Feats.html">Feats</a>
+                </li>
+				<li>
+					<a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
+            Resume</a>
+				</li>
         </ul>
         <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
 			<img src="/images/menu.svg" alt="Menu">
