--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 		<nav>
 			<ul id="menu">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/components/About.html">About</a></li>
+        <li><a href="/About.html">About</a></li>
 				<li>
-					<a href="/components/Skills.html">Skills</a>
+					<a href="/Skills.html">Skills</a>
 				</li>
 				<li>
-					<a href="/components/Projects.html">Projects</a>
+					<a href="/Projects.html">Projects</a>
 				</li>
                 <li>
-                    <a href="/components/Feats.html">Feats</a>
+                    <a href="/Feats.html">Feats</a>
                 </li>
 				<li>
 					<a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
