--- a/net/Projects.html
+++ b/net/Projects.html
@@ -24,20 +24,20 @@
     <nav>
         <ul id="menu">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/About.html">About</a></li>
+            <li><a href="/net/About.html">About</a></li>
+            <li>
+              <a href="/net/Skills.html">Skills</a>
+            </li>
+            <li>
+              <a href="/net/Projects.html">Projects</a>
+            </li>
                     <li>
-                        <a href="/Skills.html">Skills</a>
+                        <a href="/net/Feats.html">Feats</a>
                     </li>
-                    <li>
-                        <a href="/Projects.html">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/Feats.html">Feats</a>
-                    </li>
-                    <li>
-                        <a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
+            <li>
+              <a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
                 Resume</a>
-                    </li>
+            </li>
         </ul>
         <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
 			<img src="/images/menu.svg" alt="Menu">
