--- a/net/Projects.html
+++ b/net/Projects.html
@@ -35,8 +35,8 @@
                         <a href="/net/Feats.html">Feats</a>
                     </li>
             <li>
-              <a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
-                Resume</a>
+                <a href="/images/theG.pdf" onclick="window.open('/images/theG.pdf', '_blank'); return false;" class="button black">
+                    Resume</a>
             </li>
         </ul>
         <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
