--- a/net/Skills.html
+++ b/net/Skills.html
@@ -36,7 +36,7 @@
                     <a href="/net/Feats.html">Feats</a>
                 </li>
 				<li>
-					<a href="/images/Resume.pdf" onclick="window.open('/images/Resume.pdf', '_blank'); return false;" class="button black">
+          <a href="/images/theG.pdf" onclick="window.open('/images/theG.pdf', '_blank'); return false;" class="button black">
             Resume</a>
 				</li>
         </ul>
