--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        
         <section class="hero container">
           <div class="hero-yellow">
-            <img src="./images/profile.jpg" alt="Aakaash M S" width="100%" height="100%" style="border-radius: 30px;"/>
+            <img src="./images/msprofie.png" alt="Aakaash M S" width="100%" height="100%" style="border-radius: 30px;"/>
           </div>
 			<div class="hero-blue">
 				<div>
@@ -56,10 +56,9 @@
 						Aakaash M S
 					</h1>
 					<p>
-            An ardent and skilled developer with extensive hands-on experience in creating dynamic applications, building and deploying <b>Machine Learning</b> and <b>Deep Learning models</b>.
-            Proficient in multiple programming languages, data structures, and algorithms, with a strong foundation in problem-solving. 
-            Expertise in cloud computing, leveraging platforms like <b>Google Cloud Platform</b> and <b>Amazon Web Services</b> to develop scalable, efficient, and high-performance
-            solutions while ensuring automation, monitoring, and security best practices.
+            Data-driven professional with a strong foundation in analyzing complex datasets, building scalable machine learning and deep learning models, and deriving actionable business insights.
+            Skilled in statistical analysis, data visualization, and trend identification to inform strategic decision-making.
+            Experienced in designing and deploying cloud-optimized solutions using AWS and GCP, with a passion for developing innovative, scalable, and impactful data science applications.
      </p>
 				</div>
         
