--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aakaash M S</title>
-    <link rel="shortcut icon" href="./rules/images/mylabel da.png" type="image/png" sizes="84x84">
+    <link rel="icon" href="./rules/images/mylabel da.png" type="image/png" sizes="256x256">
 
     <link
   rel="stylesheet"
